--- a/squirrel-fe/index.html
+++ b/squirrel-fe/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Squirrel</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/assets/custom-script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/src/assets/wow.min.js"></script>
+    <script src="/src/assets/custom-script.js"></script>
   </body>
 </html>
