--- a/squirrel-fe/index.html
+++ b/squirrel-fe/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
     <script type="module" src="/src/assets/custom-script.js"></script>
   </body>
